# opex_manifest_generator

./: .gitignore  README.md  auto_classification.py  auto_classification_generator.py  metadata_test.py  opex_manifest.py  opex_manifest_generator.py  pyproject.toml  pytest.ini
.github/workflows/: build portable.yml  codeql.yml  pypi-publish.yml  python-tests.yml
PrevVersion/: opex_manifest.py
auto_classification_generator/: auto_classification_generator.py
installer/: README.txt  install.cmd  opex_generate.cmd  uninstall.cmd
meta/: opex_manifest_generator_AutoClass.xlsx
metadata/: DublinCore Template.xml  EAD Template.xml
opex_manifest_generator/: __init__.py  aws.py  cli.py  common.py  hash.py  opex_manifest.py  opex_manifest_generator.py  options.properties  options.py  test_cli.py
opex_manifest_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
opex_manifest_generator/.github/workflows/: codeql-analysis.yml
opex_manifest_generator/metadata/: DublinCore Template.xml  GDPR Template.xml  MODS Template.xml
opex_manifest_generator/options/: options.properties
opex_manifest_generator/samples/meta/: opex_manifest_generator_AutoClass.xlsx
opex_manifest_generator/samples/spreads/: dctemplate.xlsx  eadtemplate.xlsx
samples/: Opex.xml  Sample File 1.jpg.opex  Sample File 2.gif.opex  Sample Folder Manifest.opex  opex_manifest_generator_AutoClass.xlsx
samples/meta/: opex_manifest_generator_AutoClass.xlsx
samples/spreads/: gdprtemplate.xlsx  modstemplate.xlsx
tests/: test_opex_manifest.py
