[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "opex_manifest_generator"
version = "1.2.0"
authors = [
    {name="Christopher Prince", email="c.pj.prince@gmail.com"}
    ]
description = "Opex Manifest Generator Tool for use with Opex / Preservica"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: System :: Archiving"
    ]
dependencies=["auto_classification_generator","pandas","openpyxl","lxml"]
[project.urls]
Homepage = "https://github.com/CPJPRINCE/opex_manifest_generator"
Issues = "https://github.com/CPJPRINCE/opex_manifest_generator/issues"
[project.scripts]
opex_generate = "opex_manifest_generator.cli:run_cli"

[tool.setuptools.packages.find]
where = ['.']
include = ['opex_manifest_generator']
exclude = []