[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "opex_manifest_generator"
version = "1.3.5"
authors = [
    {name="Christopher Prince", email="c.pj.prince@gmail.com"}
    ]
description = "An Opex Manifest Generator tool for use with OPEX Files, as designed by Preservica"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
keywords = ["archiving","archives","digital archiving","opex","Preservica","opex generator"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: System :: Archiving"
    ]
dependencies=["auto_reference_generator","pandas","openpyxl","lxml"]

[project.optional-dependencies]
addex = ["odfpy"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/CPJPRINCE/opex_manifest_generator"
Issues = "https://github.com/CPJPRINCE/opex_manifest_generator/issues"
[project.scripts]
opex_generate = "opex_manifest_generator.cli:run_cli"

[tool.setuptools.packages.find]
where = ['.']
include = ['opex_manifest_generator']
exclude = []

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]